manifests/project/09-adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: webapp
spec:
  selector:
    app: adminer
  sessionAffinity: ClientIP
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
